--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "crmapi",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jevon",
   "license": "ISC",
@@ -13,15 +13,5 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aldrichjevon/crmrestapi.git"
-  },
-  "bugs": {
-    "url": "https://github.com/aldrichjevon/crmrestapi/issues"
-  },
-  "homepage": "https://github.com/aldrichjevon/crmrestapi#readme",
-  "description": ""
+  }
 }
